[workspace.package]
edition = "2021"
authors = ["Rexagon <i.kalinin@dexpa.io>", "MrWad3r <s.eliseev@dexpa.io>"]
rust-version = "1.83.0"
repository = "https://github.com/broxus/tycho-vm"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["disasm", "executor", "vm", "vm-proc", "fuzz"]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
arbitrary = "1"
bitflags = "2.4"
blake2 = "0.10.6"
criterion = "0.5"
darling = "0.20.11"
dyn-clone = "1.0"
everscale-crypto = "0.3.0"
everscale-types = { version = "0.1.2", default-features = false, features = ["bigint"] }
hex = "0.4.3"
libfuzzer-sys = "0.4"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
smol_str = "0.3"
syn = "2.0"
thiserror = "2.0"
tl-proto = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"

everscale-asm-macros = { git = "https://github.com/broxus/everscale-asm.git", rev = "1ca1675c0e9b7fa8dde3a5f7422ebd3bd169fb62" }

tycho-vm = { path = "./vm" }

[patch.crates-io]
everscale-types = { git = "https://github.com/broxus/everscale-types.git", rev = "3c23f629b5b2144d5be596dcb93fd1a146484468" }
