[workspace.package]
edition = "2024"
authors = ["Rexagon <i.kalinin@dexpa.io>", "MrWad3r <s.eliseev@dexpa.io>"]
rust-version = "1.85.0"
repository = "https://github.com/broxus/tycho-vm"
license = "MIT OR Apache-2.0"

[workspace]
resolver = "2"
members = ["disasm", "executor", "vm", "vm-proc", "fuzz"]

[workspace.dependencies]
ahash = "0.8"
anyhow = "1.0"
arbitrary = "1"
bitflags = "2.4"
blake2 = "0.10.6"
criterion = "0.7"
darling = "0.21.1"
dyn-clone = "1.0"
hex = "0.4.3"
libfuzzer-sys = "0.4"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.9"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10.8"
smol_str = "0.3"
syn = "2.0"
thiserror = "2.0"
tl-proto = "0.5.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
tycho-asm-macros = "0.1.1"
tycho-crypto = "0.4.0"
tycho-types = { version = "0.2.0", default-features = false, features = ["bigint"] }

tycho-vm = { version = "0.2.1", path = "./vm" }
tycho-vm-proc = { version = "0.2.1", path = "./vm-proc" }

[patch.crates-io]
tycho-types = { git = "https://github.com/broxus/tycho-types.git", rev = "a34d8bf9f6efff73eba40292f43e26f35f64105e" }
