[package]
name = "tycho-disasm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
bumpalo = { workspace = true }
everscale-types = { workspace = true, default-features = false, features = ["serde", "base64"] }
num-bigint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smol_str = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }

tycho-vm = { workspace = true, features = ["dump"] }

[dev-dependencies]
everscale-asm-macros = { workspace = true }
serde_json = { workspace = true }
