[package]
name = "tycho-disasm"
description = "TVM bytecode disasm."
version = "0.3.3"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smol_str = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tycho-types = { workspace = true, default-features = false, features = ["serde", "base64"] }

tycho-vm = { workspace = true, features = ["dump"] }

[dev-dependencies]
serde_json = { workspace = true }
tycho-asm-macros = { workspace = true }
