[package]
name = "tycho-executor"
description = "TON-compatible transaction executor for the Tycho node."
version = "0.3.2"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }
tycho-types = { workspace = true, default-features = false, features = ["models"] }

tycho-vm = { workspace = true }

[dev-dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tycho-asm-macros = { workspace = true }
tycho-types = { workspace = true, features = ["models", "base64"] }

tycho-vm = { workspace = true, features = ["tracing"] }
