[package]
name = "tycho-vm-fuzz"
version = "0.0.0"
publish = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[[bin]]
name = "vm_only_code"
path = "fuzz_targets/vm_only_code.rs"
test = false
doc = false
bench = false

[[bin]]
name = "action_phase_real"
path = "fuzz_targets/action_phase_real.rs"
test = false
doc = false
bench = false

[[bin]]
name = "action_phase_surreal"
path = "fuzz_targets/action_phase_surreal.rs"
test = false
doc = false
bench = false

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
libfuzzer-sys = { workspace = true }
tycho-executor = { path = "../executor" }
tycho-types = { workspace = true, features = ["arbitrary", "base64"] }
tycho-vm = { path = "../vm", features = ["arbitrary"] }
