[package]
name = "tycho-vm-proc"
description = "Helper macros for tycho-vm."
version = "0.3.1"
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true }
darling = { workspace = true }
proc-macro2 = { workspace = true }

[features]
dump = []
